# project

./: README.md  pyproject.toml
source/examples/: Deep InfoMax for images (benchmarking).ipynb  Deep InfoMax for images.ipynb  Statistical analysis.ipynb  cGAN.ipynb  infomax.py  infomax_2.py
source/examples/misc/: blank.ipynb  cGAN.py  classificators.py  exp.ipynb  infomax.py  modules.py  plots.py  statistics.py  training.py
source/examples/misc/infomax/: __init__.py  channels.py  embeddings.py
source/python/infomax/: channels.py  embeddings.py
